# maps-ir

./: .gitignore  CMakeLists.txt  README.md  ttrt_report.xml
examples/: magia_example.pipeline.json
include/maps/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/maps/Conversion/MapsToD2M/: ComputeEmitter.h  ComputeOpRegistry.h  D2MGenericBuilder.h  D2MTypeUtils.h  FinishEmitter.h  InitEmitter.h  MapsABIRewriter.h  MapsCleanup.h  MapsPatternLowering.h  MapsProgramAnalysis.h  MapsToD2M.h  PlacementAnalysis.h  SpatialEmitter.h  TileBodyEmitter.h
include/maps/Dialect/Maps/: CMakeLists.txt
include/maps/Dialect/Maps/IR/: CMakeLists.txt  Maps.h  MapsBase.td  MapsOps.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/MapsToD2M/: CMakeLists.txt  ComputeEmitter.cpp  ComputeOpRegistry.cpp  D2MGenericBuilder.cpp  D2MTypeUtils.cpp  FinishEmitter.cpp  InitEmitter.cpp  LowerStandaloneLinalgElementwise.cpp  MapsABIRewriter.cpp  MapsCleanup.cpp  MapsPatternLowering.cpp  MapsProgramAnalysis.cpp  MapsToD2M.cpp  PlacementAnalysis.cpp  PrintMapsPlacementAnalysis.cpp  PrintMapsProgramAnalysis.cpp  SpatialEmitter.cpp  TileBodyEmitter.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Maps/IR/: CMakeLists.txt  MapsDialect.cpp  MapsOps.cpp
test/: run-tests.sh
test/Conversion/MapsToD2M/: compute-emitter.mlir  compute-op-registry.mlir  finish-emitter.mlir  init-emitter.mlir  placement-analysis.mlir  program-analysis.mlir  spatial-emitter.mlir  tile-body-emitter.mlir
tools/: CMakeLists.txt
tools/maps-opt/: CMakeLists.txt  maps-opt.cpp
tools/maps-translate/: CMakeLists.txt  JsonToMaps.cpp  maps-translate.cpp
validate/: accuracy_corpus.json  accuracy_harness.py  accuracy_references.py  run_accuracy_harness.sh
